bitfields/tests/compile_error_cases/bitfield_padding_field_with_access.stderr
error: Padding fields can't have a specified access.
 --> tests/compile_error_cases/bitfield_padding_field_with_access.rs:8:7
  |
8 |     #[bits(access = ro)]
  |       ^^^^^^^^^^^^^^^^^
